--- a/Matala2/index.html
+++ b/Matala2/index.html
@@ -19,7 +19,6 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"> 
         <title>Daniel Itzhaky's website</title>
     </head>
-    <header>
         <nav>
             <ul class="sidebar">
                 <li onclick=hidesidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
@@ -52,7 +51,7 @@
                 <div class="text-container">
                     <h4>Hey, I'm</h4>
                     <h1>Daniel Itzhaky </h1>
-                    <p style="font-size: 15px;">Industrial engineering and management student</p>
+                    <p>Industrial engineering and management student</p>
                 </div>
                 
                     <div class="image-container"><img src="images2/me.jpg" alt="picture of myself"></div>
