--- a/Matala2/index.html
+++ b/Matala2/index.html
@@ -2,17 +2,17 @@
     <head>
         <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
         <script>$(window).scroll(function(){if($(window).scrollTop()){$("nav").addClass("black");}else{
-          $("nav").removeClass("black");  
-        }})</script>
-        <script>
-            $(function(){
-                $('a').each(function(){
-                    if ($(this).prop('href') == window.location.href) {
-                        $(this).addClass('active'); $(this).parents('li').addClass('active');
-                    }
-                });
-            });
-        </script>
+            $("nav").removeClass("black");  
+          }})</script>
+          <script>
+              $(function(){
+                  $('a').each(function(){
+                      if ($(this).prop('href') == window.location.href) {
+                          $(this).addClass('active'); $(this).parents('li').addClass('active');
+                      }
+                  });
+              });
+          </script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
@@ -45,7 +45,7 @@
                 sidebar.style.display = 'none'
             }
         </script>
-        </header>
+        </head>
         <body>
         <section class="container-home">
                 <div class="text-container">
