--- a/Matala2/index.html
+++ b/Matala2/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
     <head>
         <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
         <script>$(window).scroll(function(){if($(window).scrollTop()){$("nav").addClass("black");}else{
