--- a/Matala2/index.html
+++ b/Matala2/index.html
@@ -55,7 +55,9 @@
                     <p>Industrial engineering and management student</p>
                 </div>
                 
-                    <div class="image-container"><img src="images2/me.jpg" alt="picture of myself"></div>
+                    <div class="image-container">
+                        <img src="images2/me.jpg" alt="picture of myself">
+                    </div>
                 </section>
     </body>
     <footer class="footer-home">
