script fix try1

--- a/Matala2/about.html
+++ b/Matala2/about.html
@@ -2,7 +2,7 @@
 <html>
 <html lang="en">
 <head>
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script>$(window).scroll(function(){if($(window).scrollTop()){$("nav").addClass("black");}else{
         $("nav").removeClass("black");  
       }})</script>
