--- a/Matala2/projects.html
+++ b/Matala2/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script>$(window).scroll(function(){if($(window).scrollTop()){$("nav").addClass("black");}else{
         $("nav").removeClass("black");  
       }})</script>
